# smtp-otp

./: .env.example  .gitignore  README.md  pyproject.toml  random_email.py  receive_mail.py  send_mail.py
app/: main.py
app/api/v1/: endpoints.py
app/services/: email_service.py
src/: main.py
src/api/v1/: endpoints.py
src/core/: config.py
src/services/: email_service.py  gmail_api_service.py  gmail_service.py  imap_service.py  otp_service.py  random_user_service.py
